[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-fastapi"
version = "0.1.0"
description = "FastAPI wrapper for imp_agent_core agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.4,<1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "imp-agent-core",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.0",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.uv.sources]
imp-agent-core = { path = "../imp_agent_core", editable = true }
llm-inference-core = { path = "../llm_inference_core", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.basedpyright]
extraPaths = ["../imp_agent_core"]

[tool.pyright]
extraPaths = ["../imp_agent_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
